# SkeletalAnimation

./: .gitignore  CMakeLists.txt  README.md
res/animations/: crawling.glb  dying.glb  leg_sweep.gltf  running.glb  sitting_clap.glb  swing_to_land.glb  taunt.glb
res/models/: alex.glb  alex_old.glb  cube.glb  gasmask.glb  maw.glb  ninja.glb  paladin.glb  plane.glb  sphere.glb  whaleBonedSized.glb
shaders/: debugFS.glsl  meshFS.glsl  meshVS.glsl  skinnedMeshFS.glsl  skinnedMeshVS.glsl
src/: Camera.cpp  Camera.hpp  GltfUtil.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp  SkinnedModel.cpp  SkinnedModel.hpp  main.cpp  main.hpp
src/Animation/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Channel.cpp  Channel.hpp
src/GL/: GLProgram.cpp  GLProgram.hpp
src/Model/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp  SkinnedModel.cpp  SkinnedModel.hpp
